Bug 878505 - OdinMonkey: store to float array should accept doublish (r=bbouvier)